--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Style sheet setup -->
     <link rel="stylesheet" href="style/style.css" />
+    <!-- Font awesome setup -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body class="container mx-auto">
-    <nav>
+  <body class="max-w-[1160px] mx-auto font-inter">
+    <nav class="text-[#020043]">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
           <div class="dropdown">
@@ -45,27 +53,98 @@
               <li><a>About Us</a></li>
             </ul>
           </div>
-          <img src="images/logo dark.png" alt="" >
+          <img src="images/logo dark.png" alt="" />
         </div>
         <div class="navbar-center hidden lg:flex">
           <ul class="menu menu-horizontal px-1">
-            <li><a>Item 1</a></li>
-            <li>
-              <details>
-                <summary>Parent</summary>
-                <ul class="p-2">
-                  <li><a>Submenu 1</a></li>
-                  <li><a>Submenu 2</a></li>
-                </ul>
-              </details>
-            </li>
-            <li><a>Item 3</a></li>
+            <li><a>Home</a></li>
+            <li><a>Services</a></li>
+            <li><a>Blog</a></li>
+            <li><a>About Us</a></li>
           </ul>
         </div>
         <div class="navbar-end">
-          <a class="btn">Button</a>
+          <a class="btn btn-outline"
+            >Appointment
+            <span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="14"
+                height="14"
+                viewBox="0 0 14 14"
+                fill="none"
+              >
+                <path
+                  d="M13.3137 1.86314C13.3137 1.31086 12.866 0.863141 12.3137 0.863141L3.31371 0.863141C2.76142 0.863141 2.31371 1.31086 2.31371 1.86314C2.31371 2.41543 2.76142 2.86314 3.31371 2.86314L11.3137 2.86314L11.3137 10.8631C11.3137 11.4154 11.7614 11.8631 12.3137 11.8631C12.866 11.8631 13.3137 11.4154 13.3137 10.8631L13.3137 1.86314ZM1.70711 13.884L13.0208 2.57025L11.6066 1.15603L0.292893 12.4697L1.70711 13.884Z"
+                  fill="#020043"
+                />
+              </svg> </span
+          ></a>
         </div>
       </div>
     </nav>
+    <!-- Hero section -->
+    <section>
+      <div class="hero mt-10">
+        <div class="hero-content flex-col lg:flex-row">
+          <img
+            src="images/Rectangle 5.png"
+            class="w-auto rounded-[48px] shadow-2xl"
+          />
+        </div>
+      </div>
+      <div
+        class="mt-10 grid grid-cols-1 md:grid-cols-5 gap-3 justify-start"
+      >
+        <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
+          <h2 class="text-[40px] font-semibold">90%</h2>
+          <p class="text-sm mt-2 mb-6">
+            Patient satisfaction rate, reflecting our commitment.
+          </p>
+          <img src="images/rate.svg" alt="">
+        </div>
+        <div
+          class="col-start-2 col-span-3 grid grid-cols-3 gap-3"
+        >
+            <div class="col-span-3 mb-5">
+                <h2 class="text-5xl font-semibold text-center">
+                Comprehensive Care <br />
+                for Every Patient
+                </h2>
+            </div>
+            <div class="p-5 rounded-3xl bg-[#FFFFF5] border border-[#02004333]">
+                <h2 class="text-[40px] font-semibold ]">500+</h2>
+                <p class="text-sm">Board-certified doctors</p>
+                <div class=""><img src="images/certified.svg" alt="" /></div>
+            </div>
+            <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
+                <div class="flex flwx-row items-center gap-3">
+                  <h2 class="text-[40px] font-semibold">4.8</h2>
+                  <i class="fa-solid fa-star text-[#FFE03D] text-3xl"></i>
+                </div>
+                <p class="text-sm">Over 20,000 Patient</p>
+                <div class="flex flex-row mt-5">
+                  <img src="images/Ellipse 2.svg" alt="" />
+                  <img src="images/Ellipse 3.svg" alt="" />
+                  <img src="images/Ellipse 4.svg" alt="" />
+                  <img src="images/Ellipse 5.svg" alt="" />
+                </div>
+            </div>
+            <div class="bg-[#FFFFF5] border border-[#02004333] p-5 rounded-3xl ">
+                <h2 class="text-[40px] font-semibold">$5000</h2>
+                <p class="text-sm">Money spend
+                  for poor patient</p>
+                <div class=""><img src="images/coin.svg" alt=""/></div>
+            </div>
+        </div>
+        <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
+          <h2 class="text-[40px] font-semibold">50+</h2>
+          <p class="text-sm mt-2 mb-6">
+            Free lession video for patient
+          </p>
+          <img src="images/video.svg" alt="">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
