about section added

--- a/index.html
+++ b/index.html
@@ -93,56 +93,101 @@
           />
         </div>
       </div>
-      <div
-        class="mt-10 grid grid-cols-1 md:grid-cols-5 gap-3 justify-start"
-      >
+      <div class="mt-10 grid grid-cols-1 md:grid-cols-5 gap-3 justify-start">
         <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
           <h2 class="text-[40px] font-semibold">90%</h2>
           <p class="text-sm mt-2 mb-6">
             Patient satisfaction rate, reflecting our commitment.
           </p>
-          <img src="images/rate.svg" alt="">
+          <img src="images/rate.svg" alt="" />
         </div>
-        <div
-          class="col-start-2 col-span-3 grid grid-cols-3 gap-3"
-        >
-            <div class="col-span-3 mb-5">
-                <h2 class="text-5xl font-semibold text-center">
-                Comprehensive Care <br />
-                for Every Patient
-                </h2>
+        <div class="col-start-2 col-span-3 grid grid-cols-3 gap-3">
+          <div class="col-span-3 mb-5">
+            <h2 class="text-5xl font-semibold text-center">
+              Comprehensive Care <br />
+              for Every Patient
+            </h2>
+          </div>
+          <div
+            class="p-5 rounded-3xl bg-[#FFFFF5] border border-[#02004333] relative"
+          >
+            <h2 class="text-[40px] font-semibold ]">500+</h2>
+            <p class="text-sm">Board-certified doctors</p>
+            <div class="absolute bottom-0 right-5">
+              <img src="images/certified.svg" alt="" />
             </div>
-            <div class="p-5 rounded-3xl bg-[#FFFFF5] border border-[#02004333]">
-                <h2 class="text-[40px] font-semibold ]">500+</h2>
-                <p class="text-sm">Board-certified doctors</p>
-                <div class=""><img src="images/certified.svg" alt="" /></div>
+          </div>
+          <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
+            <div class="flex flwx-row items-center gap-3">
+              <h2 class="text-[40px] font-semibold">4.8</h2>
+              <i class="fa-solid fa-star text-[#FFE03D] text-3xl"></i>
             </div>
-            <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
-                <div class="flex flwx-row items-center gap-3">
-                  <h2 class="text-[40px] font-semibold">4.8</h2>
-                  <i class="fa-solid fa-star text-[#FFE03D] text-3xl"></i>
-                </div>
-                <p class="text-sm">Over 20,000 Patient</p>
-                <div class="flex flex-row mt-5">
-                  <img src="images/Ellipse 2.svg" alt="" />
-                  <img src="images/Ellipse 3.svg" alt="" />
-                  <img src="images/Ellipse 4.svg" alt="" />
-                  <img src="images/Ellipse 5.svg" alt="" />
-                </div>
+            <p class="text-sm">Over 20,000 Patient</p>
+            <div class="flex flex-row mt-5">
+              <img src="images/Ellipse 2.svg" alt="" />
+              <img src="images/Ellipse 3.svg" alt="" />
+              <img src="images/Ellipse 4.svg" alt="" />
+              <img src="images/Ellipse 5.svg" alt="" />
             </div>
-            <div class="bg-[#FFFFF5] border border-[#02004333] p-5 rounded-3xl ">
-                <h2 class="text-[40px] font-semibold">$5000</h2>
-                <p class="text-sm">Money spend
-                  for poor patient</p>
-                <div class=""><img src="images/coin.svg" alt=""/></div>
+          </div>
+          <div
+            class="bg-[#FFFFF5] border border-[#02004333] p-5 rounded-3xl relative"
+          >
+            <h2 class="text-[40px] font-semibold">$5000</h2>
+            <p class="text-sm">Money spend for poor patient</p>
+            <div class="absolute bottom-0 right-5">
+              <img src="images/coin.svg" alt="" />
             </div>
+          </div>
         </div>
         <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
           <h2 class="text-[40px] font-semibold">50+</h2>
-          <p class="text-sm mt-2 mb-6">
-            Free lession video for patient
+          <p class="text-sm mt-2 mb-6">Free lession video for patient</p>
+          <img src="images/video.svg" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- Intro section -->
+    <section>
+      <div class="flex flex-row mt-40">
+        <div class="w-1/2 ">
+          <button class="bg-[#FFFFF5] btn rounded-full mb-6">Who we are</button>
+          <h2 class="text-4xl font-semibold mb-4">We Help To Get <br> Soultions</h2>
+          <p class="max-w-[450px]">
+            We are proud to be a trusted healthcare provider in our community,
+            and we look forward to serving you and your family with excellence,
+            integrity, and compassion. Your health is our priority, and we are
+            here for you every step of the way. We believe in treating each
+            patient with dignity, respect, and empathy, ensuring that they
+            receive the attention and care they deserve.
           </p>
-          <img src="images/video.svg" alt="">
+          <div>
+            <a class="btn bg-[#FFC637] mt-12"
+              >Learn more
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                >
+                  <path
+                    d="M13.3137 1.86314C13.3137 1.31086 12.866 0.863141 12.3137 0.863141L3.31371 0.863141C2.76142 0.863141 2.31371 1.31086 2.31371 1.86314C2.31371 2.41543 2.76142 2.86314 3.31371 2.86314L11.3137 2.86314L11.3137 10.8631C11.3137 11.4154 11.7614 11.8631 12.3137 11.8631C12.866 11.8631 13.3137 11.4154 13.3137 10.8631L13.3137 1.86314ZM1.70711 13.884L13.0208 2.57025L11.6066 1.15603L0.292893 12.4697L1.70711 13.884Z"
+                    fill="#020043"
+                  />
+                </svg></span
+            ></a>
+          </div>
+        </div>
+        <div class="w-1/2 relative">
+          <div>
+            <img src="images/Rectangle 24.png" alt="" />
+          </div>
+          <div class="px-5 bg-[#343268] text-white rounded-[32px] py-10 w-2/3 absolute -translate-x-24 -translate-y-44">
+            <h2 class="mb-5">Our mission is simple</h2>
+            <p>To provide high-quality healthcare services that are accessible, personalized, and patient-centered.</p>
+          </div>
         </div>
       </div>
     </section>
