Faq section added

--- a/index.html
+++ b/index.html
@@ -150,9 +150,16 @@
     <!-- Intro section -->
     <section>
       <div class="flex flex-row mt-40">
-        <div class="w-1/2 ">
-          <button class="bg-[#FFFFF5] btn rounded-full mb-6">Who we are</button>
-          <h2 class="text-4xl font-semibold mb-4">We Help To Get <br> Soultions</h2>
+        <div class="w-1/2">
+          <button
+            class="bg-[#FFFFF5] border border-[#343268] btn rounded-full mb-6"
+          >
+            Who we are
+          </button>
+          <h2 class="text-4xl font-semibold mb-4">
+            We Help To Get <br />
+            Soultions
+          </h2>
           <p class="max-w-[450px]">
             We are proud to be a trusted healthcare provider in our community,
             and we look forward to serving you and your family with excellence,
@@ -175,8 +182,7 @@
                   <path
                     d="M13.3137 1.86314C13.3137 1.31086 12.866 0.863141 12.3137 0.863141L3.31371 0.863141C2.76142 0.863141 2.31371 1.31086 2.31371 1.86314C2.31371 2.41543 2.76142 2.86314 3.31371 2.86314L11.3137 2.86314L11.3137 10.8631C11.3137 11.4154 11.7614 11.8631 12.3137 11.8631C12.866 11.8631 13.3137 11.4154 13.3137 10.8631L13.3137 1.86314ZM1.70711 13.884L13.0208 2.57025L11.6066 1.15603L0.292893 12.4697L1.70711 13.884Z"
                     fill="#020043"
-                  />
-                </svg></span
+                  /></svg></span
             ></a>
           </div>
         </div>
@@ -184,9 +190,320 @@
           <div>
             <img src="images/Rectangle 24.png" alt="" />
           </div>
-          <div class="px-5 bg-[#343268] text-white rounded-[32px] py-10 w-2/3 absolute -translate-x-24 -translate-y-44">
-            <h2 class="mb-5">Our mission is simple</h2>
-            <p>To provide high-quality healthcare services that are accessible, personalized, and patient-centered.</p>
+          <div
+            class="px-5 bg-[#343268] text-white rounded-[32px] py-10 w-2/3 absolute -translate-x-24 -translate-y-44"
+          >
+            <h2 class="mb-5 text-2xl font-medium">Our mission is simple</h2>
+            <p class="text-[#FFFFFFCC]">
+              To provide high-quality healthcare services that are accessible,
+              personalized, and patient-centered.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Service secion -->
+    <section>
+      <div
+        class="bg-[#FFFFF5] grid grid-cols-1 md:grid-cols-2 p-12 mt-[207px] gap-7 space-y-14"
+      >
+        <div>
+          <button
+            class="bg-[#FBFBFB] border border-[#4D4C7B] btn rounded-full mb-4 px-6 py-2"
+          >
+            Service
+          </button>
+          <h2 class="text-4xl font-semibold mb-4">
+            Empowering Health, <br />
+            Enriching Lives
+          </h2>
+          <p class="max-w-[450px]">
+            We are committed to providing high-quality, compassionate care to
+            every patient we serve. Whatever your healthcare needs may be, you
+            can trust us to be your partner in health and wellness.
+          </p>
+          <div>
+            <a class="btn bg-[#FFC637] mt-12"
+              >Appointment
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                >
+                  <path
+                    d="M13.3137 1.86314C13.3137 1.31086 12.866 0.863141 12.3137 0.863141L3.31371 0.863141C2.76142 0.863141 2.31371 1.31086 2.31371 1.86314C2.31371 2.41543 2.76142 2.86314 3.31371 2.86314L11.3137 2.86314L11.3137 10.8631C11.3137 11.4154 11.7614 11.8631 12.3137 11.8631C12.866 11.8631 13.3137 11.4154 13.3137 10.8631L13.3137 1.86314ZM1.70711 13.884L13.0208 2.57025L11.6066 1.15603L0.292893 12.4697L1.70711 13.884Z"
+                    fill="#020043"
+                  /></svg></span
+            ></a>
+          </div>
+        </div>
+        <div class="relative">
+          <div>
+            <img src="images/Rectangle 27-2.png" alt="" class="rounded-3xl" />
+          </div>
+          <div
+            class="px-5 bg-[#02004399] text-white rounded-2xl py-10 w-2/3 absolute translate-x-4 -translate-y-48"
+          >
+            <h2 class="mb-5 text-xl font-medium">Advanced Technology</h2>
+            <div class="flex flex-row">
+              <p class="text-[#FFFFF5] text-xs">
+                Our surgeons are trained in the latest robotic surgical
+                techniques, which allow for greater precision
+              </p>
+              <img src="images/arrow.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="relative">
+          <div>
+            <img src="images/Rectangle 27-1.png" alt="" class="rounded-3xl" />
+          </div>
+          <div
+            class="px-5 bg-[#02004399] text-white rounded-2xl py-10 w-2/3 absolute translate-x-4 -translate-y-48"
+          >
+            <h2 class="mb-5 text-xl font-medium">Online Doctor Meet</h2>
+            <div class="flex flex-row">
+              <p class="text-[#FFFFF5] text-xs">
+                Our surgeons are trained in the latest robotic surgical
+                techniques, which allow for greater precision
+              </p>
+              <img src="images/arrow.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="relative">
+          <div>
+            <img src="images/Rectangle 27.png" alt="" class="rounded-3xl" />
+          </div>
+          <div
+            class="px-5 bg-[#02004399] text-white rounded-2xl py-10 w-2/3 absolute translate-x-4 -translate-y-48"
+          >
+            <h2 class="mb-5 text-xl font-medium">Consultancy your health</h2>
+            <div class="flex flex-row">
+              <p class="text-[#FFFFF5] text-xs">
+                Our surgeons are trained in the latest robotic surgical
+                techniques, which allow for greater precision
+              </p>
+              <img src="images/arrow.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonial section -->
+    <section>
+      <div class="mt-44">
+        <button
+          class="bg-[#FBFBFB] btn rounded-full border border-[#4D4C7B] mb-4 ml-5"
+        >
+          Testimonial
+        </button>
+        <h2 class="text-4xl font-semibold mb-8 ml-5">What they say about us</h2>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+          <div class="bg-[#FFFFF5] p-5 rounded-3xl">
+            <h2 class="mb-3 text-xl font-semibold">
+              Expertise and Compassion Combined
+            </h2>
+            <p class="text-xs">
+              I can't thank enough for their exceptional care. The doctors and
+              staff showed incredible expertise and compassion throughout my
+              treatment journey. I felt truly cared for every step of the way.
+            </p>
+            <div class="mt-4 flex flex-row gap-2">
+              <div>
+                <img src="images/Ellipse 4.svg" alt="" class="w-12 h-12" />
+              </div>
+              <div class="">
+                <p>
+                  <span class="font-semibold">Michael R,</span>Business
+                  Executive
+                </p>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+              </div>
+            </div>
+          </div>
+          <div class="bg-[#FFFFF5] p-5 rounded-3xl">
+            <h2 class="mb-3 text-xl font-semibold">
+              Life-Saving Care, Life-Changing Experience
+            </h2>
+            <p class="text-xs">
+              My experience at [Healthcare Provider Name] was life-changing. The
+              prompt and accurate diagnosis, coupled with the advanced
+              treatments they provided, saved my life.
+            </p>
+            <div class="mt-4 flex flex-row gap-2">
+              <div>
+                <img src="images/Ellipse 2.svg" alt="" class="w-12 h-12" />
+              </div>
+              <div class="">
+                <p>
+                  <span class="font-semibold">Sarah D,</span>IT Professional
+                </p>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+              </div>
+            </div>
+          </div>
+          <div class="bg-[#FFFFF5] p-5 rounded-3xl">
+            <h2 class="mb-3 text-xl font-semibold">
+              A Partner in Health and Wellness
+            </h2>
+            <p class="text-xs">
+              As a busy professional, I appreciate the convenience and quality
+              of care I receive at [Healthcare Provider Name]. From telemedicine
+              consultations to routine check-ups, they've become my trusted
+              partner in health and
+            </p>
+            <div class="mt-4 flex flex-row gap-2">
+              <div>
+                <img src="images/Ellipse 5.svg" alt="" class="w-12 h-12" />
+              </div>
+              <div class="">
+                <p><span class="font-semibold">David S,</span>Lawyer</p>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+                <i class="fa-solid fa-star text-[#FFE03D]"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="join mt-6">
+          <button class="join-item btn btn-xs">1</button>
+          <button class="join-item btn btn-xs btn-active">2</button>
+          <button class="join-item btn btn-xs">3</button>
+          <button class="join-item btn btn-xs">4</button>
+        </div>
+      </div>
+    </section>
+    <!-- FAQ section -->
+    <section>
+      <div class="mt-44">
+        <button
+          class="bg-[#FBFBFB] btn rounded-full border border-[#4D4C7B] mb-4 ml-5"
+        >
+          Faq
+        </button>
+        <h2 class="text-4xl font-semibold mb-8 ml-5">
+          Frequntly Asked Question
+        </h2>
+        <div class="mt-8">
+          <div class="join join-vertical w-full">
+            <div
+              class="collapse collapse-arrow join-item border-base-300 border"
+            >
+              <input type="radio" name="my-accordion-4" checked="checked" />
+              <div class="bg-[#FFFFF5] collapse-title text-xl font-medium">
+                What are your office hours?
+              </div>
+              <div class="collapse-content my-2">
+                <p>
+                  Our office hours vary by location, but typically we are open
+                  Monday through Friday from 8:00 AM to 5:00 PM. Some locations
+                  may offer extended hours or weekend appointments. Please
+                  contact your nearest clinic for specific hours.
+                </p>
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow join-item border-base-300 border"
+            >
+              <input type="radio" name="my-accordion-4" checked="checked" />
+              <div class="bg-[#FFFFF5] collapse-title text-xl font-medium">
+                How can I schedule an appointment?
+              </div>
+              <div class="collapse-content my-2">
+                <p>
+                  Our office hours vary by location, but typically we are open
+                  Monday through Friday from 8:00 AM to 5:00 PM. Some locations
+                  may offer extended hours or weekend appointments. Please
+                  contact your nearest clinic for specific hours.
+                </p>
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow join-item border-base-300 border"
+            >
+              <input type="radio" name="my-accordion-4" checked="checked" />
+              <div class="bg-[#FFFFF5] collapse-title text-xl font-medium">
+                Do you accept insurance?
+              </div>
+              <div class="collapse-content my-2">
+                <p>
+                  Our office hours vary by location, but typically we are open
+                  Monday through Friday from 8:00 AM to 5:00 PM. Some locations
+                  may offer extended hours or weekend appointments. Please
+                  contact your nearest clinic for specific hours.
+                </p>
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow join-item border-base-300 border"
+            >
+              <input type="radio" name="my-accordion-4" checked="checked" />
+              <div class="bg-[#FFFFF5] collapse-title text-xl font-medium">
+                What should I bring to my appointment?
+              </div>
+              <div class="collapse-content my-2">
+                <p>
+                  Our office hours vary by location, but typically we are open
+                  Monday through Friday from 8:00 AM to 5:00 PM. Some locations
+                  may offer extended hours or weekend appointments. Please
+                  contact your nearest clinic for specific hours.
+                </p>
+              </div>
+            </div>
+            <div
+              class="collapse collapse-arrow join-item border-base-300 border"
+            >
+              <input type="radio" name="my-accordion-4" checked="checked" />
+              <div class="bg-[#FFFFF5] collapse-title text-xl font-medium">
+                Do you offer telemedicine appointments?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Our office hours vary by location, but typically we are open
+                  Monday through Friday from 8:00 AM to 5:00 PM. Some locations
+                  may offer extended hours or weekend appointments. Please
+                  contact your nearest clinic for specific hours.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Discount page -->
+    <section>
+      <div>
+        <div
+          class="hero my-40"
+          style="
+            background-image: url(images/Rectangle\ 32.png);
+          "
+        >
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="hero-content text-neutral-content text-center">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+              <p class="mb-5">
+                Provident cupiditate voluptatem et in. Quaerat fugiat ut
+                assumenda excepturi exercitationem quasi. In deleniti eaque aut
+                repudiandae et a id nisi.
+              </p>
+              <button class="btn btn-primary">Get Started</button>
+            </div>
           </div>
         </div>
       </div>
