--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="container p-4 mx-auto font-inter">
+  <body class="container mx-auto font-inter">
     <nav class="text-[#020043] max-w-6xl mx-auto">
       <div class="navbar bg-base-100">
         <div class="navbar-start">
@@ -89,21 +89,21 @@
         <div class="hero-content flex-col lg:flex-row">
           <img
             src="images/Rectangle 5.png"
-            class="w-auto rounded-[48px] shadow-2xl"
+            class="w-auto md:rounded-[48px] shadow-2xl"
           />
         </div>
       </div>
-      <div class="mt-10 grid grid-cols-1 md:grid-cols-5 gap-3 justify-start max-w-6xl mx-auto">
-        <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
-          <h2 class="text-[40px] font-semibold">90%</h2>
+      <div class="mt-10 grid grid-cols-1 md:grid-cols-5 gap-3 justify-start max-w-6xl mx-auto p-4">
+        <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-lg md:rounded-3xl">
+          <h2 class="lg:text-[40px] text-2xl font-semibold">90%</h2>
           <p class="text-sm mt-2 mb-6">
             Patient satisfaction rate, reflecting our commitment.
           </p>
           <img src="images/rate.svg" alt="" />
         </div>
-        <div class="col-start-2 col-span-3 grid grid-cols-3 gap-3">
-          <div class="col-span-3 mb-5">
-            <h2 class="text-5xl font-semibold text-center">
+        <div class="md:col-start-2 md:col-span-3 grid grid-cols-1 md:grid-cols-3 gap-3">
+          <div class="md:col-span-3 mb-5">
+            <h2 class="text-2xl lg:text-5xl font-semibold text-center">
               Comprehensive Care <br />
               for Every Patient
             </h2>
@@ -111,7 +111,7 @@
           <div
             class="p-5 rounded-3xl bg-[#FFFFF5] border border-[#02004333] relative"
           >
-            <h2 class="text-[40px] font-semibold ]">500+</h2>
+            <h2 class="lg:text-[40px] text-2xl font-semibold ]">500+</h2>
             <p class="text-sm">Board-certified doctors</p>
             <div class="absolute bottom-0 right-5">
               <img src="images/certified.svg" alt="" />
@@ -119,7 +119,7 @@
           </div>
           <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
             <div class="flex flwx-row items-center gap-3">
-              <h2 class="text-[40px] font-semibold">4.8</h2>
+              <h2 class="lg:text-[40px] text-2xl font-semibold">4.8</h2>
               <i class="fa-solid fa-star text-[#FFE03D] text-3xl"></i>
             </div>
             <p class="text-sm">Over 20,000 Patient</p>
@@ -133,7 +133,7 @@
           <div
             class="bg-[#FFFFF5] border border-[#02004333] p-5 rounded-3xl relative"
           >
-            <h2 class="text-[40px] font-semibold">$5000</h2>
+            <h2 class="lg:text-[40px] text-2xl font-semibold">$5000</h2>
             <p class="text-sm">Money spend for poor patient</p>
             <div class="absolute bottom-0 right-5">
               <img src="images/coin.svg" alt="" />
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="bg-[#FBFBFB] border border-[#02004333] p-5 rounded-3xl">
-          <h2 class="text-[40px] font-semibold">50+</h2>
+          <h2 class="lg:text-[40px] text-2xl font-semibold">50+</h2>
           <p class="text-sm mt-2 mb-6">Free lession video for patient</p>
           <img src="images/video.svg" alt="" />
         </div>
@@ -149,8 +149,8 @@
     </section>
     <!-- Intro section -->
     <section>
-      <div class="flex flex-row mt-40 max-w-6xl mx-auto">
-        <div class="w-1/2">
+      <div class="flex flex-col lg:flex-row mt-10 lg:mt-40 max-w-6xl mx-auto p-4">
+        <div class="lg:w-1/2">
           <button
             class="bg-[#FFFFF5] border border-[#343268] btn rounded-full mb-6"
           >
@@ -160,7 +160,7 @@
             We Help To Get <br />
             Soultions
           </h2>
-          <p class="max-w-[450px]">
+          <p class="lg:max-w-[420px]">
             We are proud to be a trusted healthcare provider in our community,
             and we look forward to serving you and your family with excellence,
             integrity, and compassion. Your health is our priority, and we are
@@ -186,14 +186,14 @@
             ></a>
           </div>
         </div>
-        <div class="w-1/2 relative">
+        <div class="lg:w-1/2 relative">
           <div>
             <img src="images/Rectangle 24.png" alt="" />
           </div>
           <div
-            class="px-5 bg-[#343268] text-white rounded-[32px] py-10 w-2/3 absolute -translate-x-24 -translate-y-44"
+            class="px-5 bg-[#343268] text-white rounded-[32px] py-10 md:w-2/3 absolute lg:-translate-x-16 lg:-translate-y-44"
           >
-            <h2 class="mb-5 text-2xl font-medium">Our mission is simple</h2>
+            <h2 class="mb-5 text-xl lg:text-2xl font-medium">Our mission is simple</h2>
             <p class="text-[#FFFFFFCC]">
               To provide high-quality healthcare services that are accessible,
               personalized, and patient-centered.
@@ -205,7 +205,7 @@
     <!-- Service secion -->
     <section>
       <div
-        class="bg-[#FFFFF5] grid grid-cols-1 md:grid-cols-2 p-12 mt-[207px] gap-7 space-y-14 max-w-6xl mx-auto"
+        class="bg-[#FFFFF5] grid grid-cols-1 md:grid-cols-2 p-4 lg:p-12 mt-48 lg:mt-40 gap-12 lg:gap-7 space-y-14 max-w-6xl mx-auto"
       >
         <div>
           <button
@@ -245,9 +245,9 @@
             <img src="images/Rectangle 27-2.png" alt="" class="rounded-3xl" />
           </div>
           <div
-            class="px-5 bg-[#02004399] text-white rounded-2xl py-10 w-2/3 absolute translate-x-4 -translate-y-48"
+            class="px-2 lg:px-5 bg-[#02004399] text-white rounded-2xl lg:py-10 lg:w-2/3 absolute lg:translate-x-4 lg:-translate-y-48"
           >
-            <h2 class="mb-5 text-xl font-medium">Advanced Technology</h2>
+            <h2 class="mb-5 lg:text-xl font-medium">Advanced Technology</h2>
             <div class="flex flex-row">
               <p class="text-[#FFFFF5] text-xs">
                 Our surgeons are trained in the latest robotic surgical
@@ -262,9 +262,9 @@
             <img src="images/Rectangle 27-1.png" alt="" class="rounded-3xl" />
           </div>
           <div
-            class="px-5 bg-[#02004399] text-white rounded-2xl py-10 w-2/3 absolute translate-x-4 -translate-y-48"
+            class="px-2 lg:px-5 bg-[#02004399] text-white rounded-2xl lg:py-10 lg:w-2/3 absolute lg:translate-x-4 lg:-translate-y-48"
           >
-            <h2 class="mb-5 text-xl font-medium">Online Doctor Meet</h2>
+            <h2 class="mb-5 lg:text-xl font-medium">Online Doctor Meet</h2>
             <div class="flex flex-row">
               <p class="text-[#FFFFF5] text-xs">
                 Our surgeons are trained in the latest robotic surgical
@@ -279,9 +279,9 @@
             <img src="images/Rectangle 27.png" alt="" class="rounded-3xl" />
           </div>
           <div
-            class="px-5 bg-[#02004399] text-white rounded-2xl py-10 w-2/3 absolute translate-x-4 -translate-y-48"
+            class="px-2 lg:px-5 bg-[#02004399] text-white rounded-2xl lg:py-10 lg:w-2/3 absolute lg:translate-x-4 lg:-translate-y-48"
           >
-            <h2 class="mb-5 text-xl font-medium">Consultancy your health</h2>
+            <h2 class="mb-5 lg:text-xl font-medium">Consultancy your health</h2>
             <div class="flex flex-row">
               <p class="text-[#FFFFF5] text-xs">
                 Our surgeons are trained in the latest robotic surgical
@@ -295,7 +295,7 @@
     </section>
     <!-- Testimonial section -->
     <section>
-      <div class="mt-44 max-w-6xl mx-auto">
+      <div class="mt-28 lg:mt-40 max-w-6xl mx-auto">
         <button
           class="bg-[#FBFBFB] btn rounded-full border border-[#4D4C7B] mb-4 ml-5"
         >
@@ -389,7 +389,7 @@
     </section>
     <!-- FAQ section -->
     <section>
-      <div class="mt-44 max-w-6xl mx-auto">
+      <div class="mt-16 lg:mt-40 max-w-6xl mx-auto p-4">
         <button
           class="bg-[#FBFBFB] btn rounded-full border border-[#4D4C7B] mb-4 ml-5"
         >
@@ -486,9 +486,9 @@
     </section>
     <!-- Discount page -->
     <section>
-      <div class="max-w-6xl mx-auto">
+      <div class="max-w-6xl mx-auto p-4">
         <div
-          class="my-40 min-h-[480px] rounded-[32px] p-14 bg-no-repeat bg-cover"
+          class="my-10 lg:my-40 min-h-[480px] rounded-[32px] p-8 lg:p-14 bg-no-repeat bg-cover"
           style="
             background-image: radial-gradient(
                 640.07% 148.88% at -90% 78%,
@@ -501,14 +501,14 @@
           <div class="flex flex-row justify-between">
             <div>
               <div>
-                <h1 class="mb-5  text-4xl font-semibold text-white">
+                <h1 class="mb-5 text-2xl lg:text-4xl font-semibold text-white">
                     Get Your <br />
                     First Appointment <br />
                     at 50% Off!
                   </h1>
               </div>
-              <div class="mt-6">
-                <a class="btn bg-[#FFC637] mt-12"
+              <div class="mt-6 ">
+                <a class="btn bg-[#FFC637] mt-12 "
                   >Appointment
                   <span>
                     <svg
